# NeuroMotorica

./: .coveragerc  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README-PR.md  README.md  SECURITY.md  bandit.yaml  docker-compose.yml  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml
.github/workflows/: ci.yml
benchmarks/: thresholds.yml
data/benchmarks/: physio_ranges.json
data/profiles/: baseline.json  elite.json  rehab.json
docs/: 01_PROTOCOL.md  03_ETHICS_GDPR.md  04_DATA_MANAGEMENT.md  05_TRIAL_REGISTRATION.md  06_RISK_MITIGATION.md  CONTRIBUTING-L10N.md  ETHICS_AUDIT.md  SLO_SLI.md  algorithms.md  api.md  extended.md  glossary.md  index.md  model.md  optimization.md  styleguide.md  validation.md
docs/guides/: benchmarks.md  validation.md
edge/policy/i18n/: messages.en.json  messages.uk.json
modules/neuromotorica_universal/: README.md  pyproject.toml
modules/neuromotorica_universal/src/neuromotorica_universal/: __init__.py
modules/neuromotorica_universal/tests/: test_api.py  test_nmj.py  test_policy.py
sample_data/: mock_reps.json  profiles_catalog.json
src/neuromotorica/: __init__.py  cli.py  profiles.py
src/neuromotorica/adapters/: __init__.py  ble.py  camera.py  storage.py
src/neuromotorica/algo/: bandits.py
src/neuromotorica/analysis/: benchmarking.py  benchmarks_cli.py  extended_validation.py  profiling.py  validation.py  viz.py  viz_cli.py
src/neuromotorica/bench/: __init__.py  report.py  runner.py
src/neuromotorica/cloud/api/: db.py  main.py  schemas.py
src/neuromotorica/cloud/services/: policy_service.py  session_service.py
src/neuromotorica/common/: events.py  exceptions.py
src/neuromotorica/core/: __init__.py  export.py  registry.py
src/neuromotorica/edge/: coach_loop.py
src/neuromotorica/edge/policy/: cues.json  engine.py  safety.py
src/neuromotorica/edge/tts/: tts.py
src/neuromotorica/i18n/: core.py
src/neuromotorica/mlzoo/: __init__.py
src/neuromotorica/models/: enhanced_nmj.py  extended_muscle.py  extended_nmj.py  filters.py  kernels.py  muscle.py  nmj.py  pool.py
src/neuromotorica/validate/: __init__.py  run.py  viz.py
src/neuromotorica/validate/validators/: configs.py  dataq.py  openapi.py  (+1 more)
src/neuromotorica_universal/: __init__.py
src/neuromotorica_universal/api/: app.py  schemas.py
src/neuromotorica_universal/core/: nmj.py
src/neuromotorica_universal/data/: physio_ranges.json
src/neuromotorica_universal/policy/: coach.py
tests/: conftest.py  test_api.py  test_cli_api_viz_validation.py  test_core_export.py  test_edge_policy_safety.py  test_extended_features.py  test_imports.py  test_kernels_filters.py  test_model_registry.py  test_models_core.py  test_nmj.py  test_nmj_fft_threshold.py  test_policy.py  test_sample_data.py  test_session_service.py
tests/analysis/: test_viz_cli.py
tests/api/: fuzz_profiles.yaml
tests/cloud/: test_metrics_toggle.py
tests/i18n/: test_cli_i18n.py
ui/pwa/: README.md  index.html  package.json  tsconfig.json
ui/pwa/public/: manifest.webmanifest
ui/pwa/src/: App.tsx  main.tsx  service-worker.ts
(+9 files in other folders)
