[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuromotorica"
version = "0.7.0"
description = "NeuroMotorica: NMJ co-transmission simulation + viz + validation + CI (2025)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "NeuroMotorica Team"}]
dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.8",
  "typer>=0.12",
  "rich>=13.0",
  "pyttsx3>=2.90",
  "pydantic>=2.7",
  "fastapi>=0.115",
  "uvicorn>=0.30"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-xdist>=3.6",
  "ruff>=0.6.0",
  "black>=24.3.0",
  "mypy>=1.11.0",
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
  "httpx>=0.27.0",
  "bandit>=1.7.8",
  "pip-audit>=2.7.3",
  "actionlint-py>=1.7.1"
]

[project.scripts]
neuromotorica = "neuromotorica.cli:app"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","B","SIM","C90"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
strict = true

[tool.pytest.ini_options]
addopts = "-q -ra --cov=neuromotorica --cov-report=xml:coverage.xml --cov-report=term-missing:skip-covered --cov-fail-under=85 -n auto"
filterwarnings = ["ignore::DeprecationWarning"]
