[project]
name = "neuromotorica"
version = "0.0.0"  # managed by setuptools-scm in real repo
description = "Neuromotorica unified package"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name="Neuromotorica contributors"}]
license = { text = "Apache-2.0" }
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-xdist>=3",
  "pytest-timeout>=2.3",
  "pytest-html>=4",
  "schemathesis[pytest]>=3.25",
  "hypothesis>=6.112",
  "httpx>=0.27",
  "prometheus-client>=0.20",
  "typer>=0.12",
  "pydantic-settings>=2.5",
  "pyyaml>=6.0",
  "matplotlib>=3.7",
  "openapi-spec-validator>=0.7",
]

[tool.pytest.ini_options]
addopts = "-q"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
